--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,55 @@ server:
 spring:
   application:
     name: match-eninge
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource  # 指定使用 Druid 连接池
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/match_engine?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+    username: root
+    password: root123
+
+    # Druid 连接池配置
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1 FROM DUAL
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
+
+      # 配置监控统计拦截的filters，stat:监控统计、log4j:日志记录、wall:防御SQL注入
+      filters: stat,wall,log4j
+
+      # WebStatFilter配置
+      web-stat-filter:
+        enabled: true
+        url-pattern: /*
+        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"
+
+      # StatViewServlet配置
+      stat-view-servlet:
+        enabled: true
+        url-pattern: /druid/*
+        reset-enable: true
+        login-username: admin
+        login-password: admin
+        allow: 127.0.0.1
+        # deny: 192.168.1.100
+
+# application.yml
+logging:
+  level:
+    root: INFO  # 根日志级别
+    com.github.krystalics: INFO  # 自定义包的日志级别
+    org.springframework: WARN  # Spring 框架的日志级别
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
