--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,17 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.13</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.14.1</version>
+        </dependency>
     </dependencies>
 
     <!-- Maven插件 -->
