多环境yml应用

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -39,19 +39,19 @@ spring:
         # deny: 192.168.1.100
 
   kafka:
-      topic: ${spring.kafka.topic}
-      bootstrap-servers: localhost:9092  # Kafka 服务器地址
-      producer:
-        key-serializer: org.apache.kafka.common.serialization.StringSerializer
-        value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      consumer:
-        group-id: my-group  # 消费者组 ID
-        auto-offset-reset: earliest  # 消费位置重置策略
-        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-        max-poll-records: 100  # 每次拉取的最大记录数
-        properties:
-          fetch.max.wait.ms: 500  # 最大等待时间
+    topic: test-topic-dev
+    bootstrap-servers: localhost:9092  # Kafka 服务器地址
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: my-group-dev  # 消费者组 ID
+      auto-offset-reset: earliest  # 消费位置重置策略
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      max-poll-records: 100  # 每次拉取的最大记录数
+      properties:
+        fetch.max.wait.ms: 500  # 最大等待时间
 
 # application.yml
 logging:
